Prevent overflow x

--- a/nav-two/nav-two.css
+++ b/nav-two/nav-two.css
@@ -6,12 +6,14 @@
 }
 html{
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 body{
     font-family:"Roman-55","Helvetica Neue","Helvetica","Arial",sans-serif;
     color: #323232;
     font-size: 1em;
     line-height: 1.2;
+    position: relative;
     overflow-x: hidden;
     font-feature-settings: "salt";
     -webkit-font-feature-settings: "salt";
